Refactor button dialogs. Refactor css on evolution's view.

--- a/front/src/app/coach/exercises/exercise-form-dialog/exercise-form-dialog.component.html
+++ b/front/src/app/coach/exercises/exercise-form-dialog/exercise-form-dialog.component.html
@@ -106,10 +106,10 @@
                 </md-tab-group>
             </div>
             <div class="modal-footer">
+                <button type="button" class="btn btn-default btn-flat-danger" (click)="close()">Annuler</button>
                 <button class="btn btn-primary" type="submit" [disabled]="exerciseForm.invalid">
                     Sauvegarder
                 </button>
-                <button type="button" class="btn btn-default" (click)="close()">Annuler</button>
             </div>
         </form>
     </div>
