--- a/front/src/app/member/evolution/measurements-list/measurements-list.component.html
+++ b/front/src/app/member/evolution/measurements-list/measurements-list.component.html
@@ -33,7 +33,7 @@
                             Bras gauche
                         </span>
                             <span *ngSwitchCase="'RIGHT_CALF'" class="text-black-primary text-muted">
-                            Mollet droite
+                            Mollet droit
                         </span>
                             <span *ngSwitchCase="'LEFT_CALF'" class="text-black-primary text-muted">
                             Mollet gauche
@@ -57,7 +57,7 @@
                 <hr *ngIf="!last">
             </md-list-item>
         </div>
-        <div class="pt-5 pb-5">
+        <div>
             <button type="button" (click)="openDialogAddMeasurement()"
                     class="btn btn-lg btn-secondary text-white w-100 text-center"
                     type="submit">
