--- a/front/src/app/member/exercise/exercise-specific-properties-form-dialog/exercise-specific-properties-form-dialog.component.html
+++ b/front/src/app/member/exercise/exercise-specific-properties-form-dialog/exercise-specific-properties-form-dialog.component.html
@@ -259,10 +259,11 @@
                 </div>
             </div>
             <div class="modal-footer">
-                <button type="button" class="btn btn-default" (click)="close()">Annuler</button>
+                <button type="button" class="btn btn-default btn-flat-danger" (click)="close()">Annuler</button>
                 <button class="btn btn-primary" type="submit" [disabled]="exerciseForm.invalid">
                     Sauvegarder
                 </button>
+
             </div>
         </form>
     </div>
