--- a/front/src/app/coach/machines/machine-form-dialog/machine-form-dialog.component.html
+++ b/front/src/app/coach/machines/machine-form-dialog/machine-form-dialog.component.html
@@ -51,10 +51,10 @@
             </div>
 
             <div class="modal-footer">
+                <button type="button" class="btn btn-default btn-flat-danger" (click)="close()">Annuler</button>
                 <button class="btn btn-primary" type="submit" [disabled]="machineForm.invalid">
                     <span>{{titleConfirm}}</span>
                 </button>
-                <button type="button" class="btn btn-default" (click)="close()">Annuler</button>
             </div>
         </form>
     </div>
