--- a/front/src/app/member/evolution/measurements-add-dialog/measurements-add-dialog.component.html
+++ b/front/src/app/member/evolution/measurements-add-dialog/measurements-add-dialog.component.html
@@ -171,10 +171,10 @@
             </div>
 
             <div class="modal-footer">
+                <button type="button" class="btn btn-default btn-flat-danger" (click)="close()">Annuler</button>
                 <button class="btn btn-primary" type="submit" [disabled]="measurementsForm.invalid">
                     Enregistrer
                 </button>
-                <button type="button" class="btn btn-default" (click)="close()">Annuler</button>
             </div>
         </form>
     </div>
