--- a/front/src/app/shared/profile/profile-member-form-dialog/profile-member-form-dialog.component.html
+++ b/front/src/app/shared/profile/profile-member-form-dialog/profile-member-form-dialog.component.html
@@ -33,7 +33,8 @@
                             </md-input-container>
                             <md-input-container class="col-md-12" color="primary">
                                 <input mdInput [mdDatepicker]="picker" readonly='true' formControlName="birthdate"
-                                       placeholder="Saisissez votre date de naissance" required [max]="maximumBirthdate">
+                                       placeholder="Saisissez votre date de naissance" required
+                                       [max]="maximumBirthdate">
                                 <button mdSuffix [mdDatepickerToggle]="picker"></button>
                             </md-input-container>
                             <md-datepicker #picker></md-datepicker>
