--- a/front/src/app/shared/profile/profile-photo/photo-form-dialog/photo-form-dialog.component.html
+++ b/front/src/app/shared/profile/profile-photo/photo-form-dialog/photo-form-dialog.component.html
@@ -21,8 +21,8 @@
             </div>
         </div>
         <div class="modal-footer">
+            <button type="button" class="btn btn-default btn-flat-danger" (click)="close()">Annuler</button>
             <button class="btn btn-primary" type="button" (click)="confirm()">Modifier</button>
-            <button type="button" class="btn btn-default" (click)="close()">Annuler</button>
         </div>
     </div>
 </div>
