--- a/front/src/app/member/evolution/measurements-add-dialog/measurements-add-dialog.component.html
+++ b/front/src/app/member/evolution/measurements-add-dialog/measurements-add-dialog.component.html
@@ -76,7 +76,7 @@
                             <md-input-container class="col-md-12" color="primary" ngxErrors="hip">
                                 <input id="inputHip" mdInput type="number"
                                        placeholder="Tour de hanche (cm)"
-                                       formControlName="waist">
+                                       formControlName="hip">
                                 <md-hint *ngIf="hipCtrl.dirty && hipCtrl.hasError('maxValue')"
                                          class="form-control-feedback">{{errorTranslations.hip.maxValue}}
                                 </md-hint>
