--- a/front/src/app/member/evolution/evolution.component.html
+++ b/front/src/app/member/evolution/evolution.component.html
@@ -22,7 +22,7 @@
     <div class="row pt-4">
         <div class="col-md-6">
             <h3 class="text-left text-black-primary text-w-300">
-                Mensuration
+                Suivi d'une mensuration
             </h3>
         </div>
         <div class="col-md-6 my-auto">
