--- a/front/src/app/member/program/program.component.html
+++ b/front/src/app/member/program/program.component.html
@@ -5,10 +5,9 @@
         </h3>
     </div>
     <div class="col-md-6 my-auto">
-        <md-select placeholder="Séance" class="pull-right" [(ngModel)]="focusedSession"
-                   (change)="focusedSessionChanged($event)">
+        <md-select placeholder="Séance" class="pull-right" [(ngModel)]="focusedSession" (change)="focusedSessionChanged($event)">
             <md-option *ngFor="let session of program.sessions; let i = index;" [value]="session">
-                Séance {{ i+1 }}
+                {{session.dayInWeek}}
             </md-option>
         </md-select>
         <h3 class="my-auto"><i class="mr-2 pull-right fa fa-filter text-secondary"></i></h3>
@@ -18,24 +17,16 @@
 <section>
     <div class="row mb-3">
         <div class="col-md-4">
-            <pulpe-simple-counter-with-icon icoClass="ion ion-ios-calendar-outline"
-                                            label="Généré le"
-                                            icoBackgroundColor="orange"
-                                            value="{{createdAt}}">
+            <pulpe-simple-counter-with-icon icoClass="ion ion-ios-calendar-outline" label="Généré le" icoBackgroundColor="orange" value="{{createdAt}}">
             </pulpe-simple-counter-with-icon>
         </div>
         <div class="col-md-4">
-            <pulpe-simple-counter-with-icon icoClass="ion ion-ios-refresh-empty"
-                                            label="Nb. de fois terminé"
-                                            icoBackgroundColor="green"
-                                            value="33x">
+            <pulpe-simple-counter-with-icon icoClass="ion ion-ios-refresh-empty" label="Nb. de fois terminé" icoBackgroundColor="green"
+                value="{{focusedSession.doneCounter}}">
             </pulpe-simple-counter-with-icon>
         </div>
         <div class="col-md-4">
-            <pulpe-simple-counter-with-icon icoClass="ion-ios-timer-outline"
-                                            label="Durée"
-                                            icoBackgroundColor="blue"
-                                            value="{{totalTimeOfFocusedSession}}">
+            <pulpe-simple-counter-with-icon icoClass="ion-ios-timer-outline" label="Durée" icoBackgroundColor="blue" value="{{totalTimeOfFocusedSession}}">
             </pulpe-simple-counter-with-icon>
         </div>
     </div>
@@ -46,8 +37,8 @@
                 <hr class="w-100">
                 <div class="row">
                     <div class="col-md-12 text-center mt-md-4">
-                        <p class="lead text-center mb-0 text-white text-w-400">{{program.objective |
-                            translateObjectiveName:program.objective}}</p>
+                        <p class="lead text-center mb-0 text-white text-w-400">{{program.objective | translateObjectiveName:program.objective}}
+                        </p>
                         <img [src]="objectivesEnumProperties[program.objective].pictureLink" alt="Type">
                     </div>
                 </div>
@@ -86,17 +77,14 @@
     <div class="row">
         <div class="col-md-12">
             <md-tab-group (selectChange)="refreshFocusedExercisesGroupBy($event)" exercisesGroupTab>
-                <md-tab *ngFor="let exercisesGroupLabel of exerciseGroupLabels"
-                        label="{{exercisesGroupLabel.label}}">
+                <md-tab *ngFor="let exercisesGroupLabel of exerciseGroupLabels" label="{{exercisesGroupLabel.label}}">
                     <md-card>
                         <div class="row">
                             <div class="col-md-12">
                                 <div class="row">
                                     <div class="col-md-12">
-                                        <md-list-item
-                                                *ngFor="let exercise of focusedExercisesGroup.exercises; let last = last">
-                                            <pulpe-exercise-preview [exercise]="exercise"
-                                                                    (exerciseUpdated)="refreshProgramByExercise($event)"></pulpe-exercise-preview>
+                                        <md-list-item *ngFor="let exercise of focusedExercisesGroup.exercises; let last = last">
+                                            <pulpe-exercise-preview [exercise]="exercise" (exerciseUpdated)="refreshProgramByExercise($event)"></pulpe-exercise-preview>
                                             <hr *ngIf="!last" class="white">
                                         </md-list-item>
                                     </div>
