New icon is coach lists

--- a/front/src/app/coach/exercises/exercises.component.html
+++ b/front/src/app/coach/exercises/exercises.component.html
@@ -4,7 +4,7 @@
     </pulpe-page-title>
 
     <pulpe-header-list [title]="'Exercices'"
-                       [icon]="'ion ion-person-stalker'"
+                       [icon]="'icon-althere'"
                        [nbElements]="filteredExercises.length"
                        [placeHolderTitle]="'Par nom'"
                        (filterArgs)="doFilterExercises($event)">
