--- a/front/src/app/coach/machines/machines.component.html
+++ b/front/src/app/coach/machines/machines.component.html
@@ -4,7 +4,7 @@
     </pulpe-page-title>
 
     <pulpe-header-list [title]="'Machines'"
-                       [icon]="'ion ion-podium'"
+                       [icon]="'icon-machine'"
                        [nbElements]="filteredMachines.length"
                        [placeHolderTitle]="'Par nom'"
                        (filterArgs)="doFilterMachines($event)">
