--- a/front/src/app/shared/sidebar/sidebar.component.html
+++ b/front/src/app/shared/sidebar/sidebar.component.html
@@ -91,7 +91,7 @@
                         [routerLink]="['machines']"
                         *ngIf="profileService.profileIsCompleted()">
                         <a>
-                            <i class="material-icons">storage</i>
+                            <i class="icon-machine material-icons"></i>
                             <span class="pl-4">Machines</span>
                         </a>
                     </li>
@@ -99,7 +99,7 @@
                         [routerLink]="['exercices']"
                         *ngIf="profileService.profileIsCompleted()">
                         <a>
-                            <i class="material-icons">fitness_center</i>
+                            <i class="material-icons icon-althere"></i>
                             <span class="pl-4">Exercices</span>
                         </a>
                     </li>
