--- a/front/src/app/shared/lists/header-list/header-list.component.html
+++ b/front/src/app/shared/lists/header-list/header-list.component.html
@@ -2,7 +2,7 @@
     <md-card class="col-md-12">
         <div class="row">
             <div class="col-md-2 text-center my-auto separatorVertical">
-                <span class="icon ${{icon}}"></span>
+                <i class="icon {{icon}}"></i>
                 <div class="text-light-weight">
                     <strong class="text-primary">{{nbElements}}</strong> {{title}}
                 </div>
