Fix bugs (exercises list coach, edit difficulty on exercise, ...), secured all routes

--- a/front/src/app/shared/sidebar/sidebar.component.html
+++ b/front/src/app/shared/sidebar/sidebar.component.html
@@ -66,7 +66,7 @@
                 </ul>
                 <ul class="mynav" *ngIf="profileService.profileIsCoach()">
                     <li class="sidebar-link pt-2 pb-3" [routerLinkActive]="['active']"
-                        [routerLink]="['profile/coach/', authenticationProfile.id]"
+                        [routerLink]="['profile/coach/']"
                         *ngIf="profileService.profileIsCompleted()">
                         <a>
                             <i class="material-icons">person</i>
