--- a/front/src/app/member/program/exercise-preview/exercise-preview.component.scss
+++ b/front/src/app/member/program/exercise-preview/exercise-preview.component.scss
@@ -4,12 +4,12 @@
   font-size: 1.15rem;
   font-weight: 400;
   //background-color: @accent-color;
-  color: $accent-color;
+  color: $primary-color;
 }
 
 .exerciseMachineName {
   font-size: 0.85rem;
-  font-weight: 400;
+  font-weight: 400; 
   font-style: italic;
   color: $secondary-text;
 }
