--- a/front/src/app/member/program/exercise-preview/exercise-preview.component.html
+++ b/front/src/app/member/program/exercise-preview/exercise-preview.component.html
@@ -79,7 +79,7 @@
         <div class="col-6 offset-sm-0 col-md-2 text-center" *ngIf="exercise.times">
             <span mdTooltip="Durée"
                   [mdTooltipPosition]="'right'">
-                <i class="fa fa-repeat"></i>
+                <i class="ion ion-ios-timer-outline"></i>
                 <span>{{exercise.times | number:'1.2-2'}} min</span>
             </span>
         </div>
