--- a/front/src/app/shared/sidebar/sidebar.component.html
+++ b/front/src/app/shared/sidebar/sidebar.component.html
@@ -80,7 +80,7 @@
                         </a>
                     </li>
                     <li class="sidebar-link pt-2 pb-3" [routerLinkActive]="['active']"
-                        [routerLink]="['adherents', authenticationProfile.id]"
+                        [routerLink]="['adherents']"
                         *ngIf="profileService.profileIsCompleted()">
                         <a>
                             <i class="material-icons">supervisor_account</i>
