--- a/front/src/app/coach/home-coach/home-coach.component.html
+++ b/front/src/app/coach/home-coach/home-coach.component.html
@@ -91,4 +91,9 @@
         </div>
     </div>
 
+    <div class="row pt-3" *ngIf="demo">
+        <div class="col-md-12 text-center">
+            <button type="button" class="btn btn-warning text-white" (click)="populateDemoData()">DÉMO</button>
+        </div>
+    </div>
 </div>
