--- a/front/src/app/coach/exercises/exercises.component.html
+++ b/front/src/app/coach/exercises/exercises.component.html
@@ -17,7 +17,7 @@
     <div class="row">
         <div class="col-md-12 pt-2 pb-2 btnBottomRight">
             <button md-fab class="pull-right bg-secondary" (click)="openExerciseFormDialogOnMode(openableMode.Add)"
-                    mdTooltip="Ajouter un exercice" [mdTooltipPosition]="'right'">
+                    mdTooltip="Ajouter un exercice" [mdTooltipPosition]="'left'">
                 <i class="ion-plus addIcon"></i>
             </button>
         </div>
