--- a/front/src/app/shared/lists/header-list/header-list.component.html
+++ b/front/src/app/shared/lists/header-list/header-list.component.html
@@ -9,7 +9,7 @@
             </div>
             <div class="col-md-10">
                 <div class="float-md-right text-center">
-                    <span class="ion ion-ios-search actionsIcon"></span>
+                    <span class="ion ion-ios-search"></span>
                     <md-input-container class="searchPlaceHolder font-weight-light">
                         <input mdInput placeholder="{{placeHolderTitle}}"
                              (input)="change()" [(ngModel)]="searchInput">
