Mobile app work with cardio exercise

--- a/mobile/src/components/exercise-execution/exercise-execution.html
+++ b/mobile/src/components/exercise-execution/exercise-execution.html
@@ -1,13 +1,13 @@
 <div [ngSwitch]="exerciseExecutionContext.getExercise().type">
-    <exercise-training-execution [exerciseExecutionContext]="exerciseExecutionContext"
-                                 *ngSwitchCase="ExerciseGroupTypeEnum.TrainingExercise"
-                                 (finished)="terminate()"></exercise-training-execution>
+    <exercise-training-execution [exerciseExecutionContext]="exerciseExecutionContext" *ngSwitchCase="ExerciseGroupTypeEnum.TrainingExercise"
+        (finished)="terminate()"></exercise-training-execution>
 
-    <exercise-bodybuilding-execution [exerciseExecutionContext]="exerciseExecutionContext"
-                                     *ngSwitchCase="ExerciseGroupTypeEnum.BodybuildingExercise"
-                                     (finished)="terminate()"></exercise-bodybuilding-execution>
+    <exercise-bodybuilding-execution [exerciseExecutionContext]="exerciseExecutionContext" *ngSwitchCase="ExerciseGroupTypeEnum.BodybuildingExercise"
+        (finished)="terminate()"></exercise-bodybuilding-execution>
 
-    <exercise-organized-execution [exerciseExecutionContext]="exerciseExecutionContext"
-                                  *ngSwitchCase="ExerciseGroupTypeEnum.OrganizedExercise"
-                                  (finished)="terminate()"></exercise-organized-execution>
+    <exercise-organized-execution [exerciseExecutionContext]="exerciseExecutionContext" *ngSwitchCase="ExerciseGroupTypeEnum.OrganizedExercise"
+        (finished)="terminate()"></exercise-organized-execution>
+
+    <exercise-cardio-execution [exerciseExecutionContext]="exerciseExecutionContext" *ngSwitchCase="ExerciseGroupTypeEnum.CardioExercise"
+        (finished)="terminate()"></exercise-cardio-execution>
 </div>
