--- a/mobile/src/components/timer/timer.html
+++ b/mobile/src/components/timer/timer.html
@@ -21,7 +21,7 @@
             Reprendre
         </button>
         <button ion-button icon-left clear small color="primary" (click)="startTimer()" item-right
-                *ngIf="!timer.hasStarted">
+                *ngIf="!timer.hasStarted && canStart">
             <ion-icon name="play"></ion-icon>
             Commencer
         </button>
