Consult program of a member

--- a/front/src/app/coach/members/program-member/program-member.component.html
+++ b/front/src/app/coach/members/program-member/program-member.component.html
@@ -1,6 +1,6 @@
 <div [@fadeIn]>
     <pulpe-page-title
-            [title]="'Programme de l\'adhérent :'">
+            [title]="pageTitle">
     </pulpe-page-title>
 
     <pulpe-header-list-sessions [title]="'Exercices'"
