Consult program of a member from member's list view

--- a/front/src/app/coach/members/program-member/exercise-program-form-dialog/exercise-program-form-dialog.component.html
+++ b/front/src/app/coach/members/program-member/exercise-program-form-dialog/exercise-program-form-dialog.component.html
@@ -71,9 +71,9 @@
                             </div>
                         </div>
 
-                        <div class="form-group">
+                        <div *ngIf="isDialogModeAdd" class="form-group">
                             <md-select placeholder="Choisissez la séance" class="col-md-12"
-                                       formControlName="sessions" required>
+                                       formControlName="sessions">
                                 <md-option *ngFor="let session of sessions"
                                            [value]="session">
                                     {{session.dayInWeek}}
