Change session from mobile, modif of program of member from coach context

--- a/front/src/app/coach/members/program-member/program-member.component.html
+++ b/front/src/app/coach/members/program-member/program-member.component.html
@@ -9,7 +9,7 @@
                                 [sessions]="program.sessions"
                                 [placeHolderTitle]="'Par nom'"
                                 (filterArgs)="doFilterExercises($event)"
-                                (filteredExercises)="doFilterSession($event)">
+                                (filteredBySession)="doFilterBySession($event)">
     </pulpe-header-list-sessions>
 
     <div class="mt-3">
