Fix bug : validation of email and date on edit member/coach form.

--- a/front/src/app/coach/profile/profile-coach-edit-dialog/profile-coach-edit-dialog.component.html
+++ b/front/src/app/coach/profile/profile-coach-edit-dialog/profile-coach-edit-dialog.component.html
@@ -10,7 +10,7 @@
                 <div label="Informations" class="row">
                     <div class="overflow-hidden">
                         <md-input-container class="col-md-12" color="primary" ngxErrors="email">
-                            <input id="inputMail" mdInput type="email"
+                            <input id="inputMail" mdInput type="email" email
                                    placeholder="Votre Email"
                                    formControlName="email"
                                    required>
