--- a/front/src/app/shared/profile/profile-member-form-dialog/profile-member-form-dialog.component.html
+++ b/front/src/app/shared/profile/profile-member-form-dialog/profile-member-form-dialog.component.html
@@ -11,7 +11,8 @@
                     <md-tab label="Informations" class="row">
                         <div class="overflow-hidden">
                             <md-input-container class="col-md-12" color="primary" ngxErrors="email">
-                                <input id="inputMail" mdInput type="email"
+                                <input id="inputMail" mdInput type="email" email
+                                       name="email"
                                        placeholder="Votre Email"
                                        formControlName="email"
                                        required>
