--- a/front/src/app/signin/signin.component.html
+++ b/front/src/app/signin/signin.component.html
@@ -34,7 +34,7 @@
                                     <div class="form-group">
                                         <i class="col-md-1 offset-1 col-2 text-center fa fa-2x fa-envelope prefix my-auto pr-0"></i>
                                         <md-input-container class="col-7 col-md-8" color="primary" ngxErrors="email">
-                                            <input id="inputEmail" mdInput type="email"
+                                            <input id="inputEmail" mdInput type="email" email
                                                    placeholder="Saisissez votre email"
                                                    formControlName="email"
                                                    required>
