--- a/front/src/app/signup/signup.component.html
+++ b/front/src/app/signup/signup.component.html
@@ -62,7 +62,7 @@
                                     <div class="form-group">
                                         <i class="col-md-1 offset-1 col-2 text-center fa fa-2x fa-envelope prefix my-auto pr-0"></i>
                                         <md-input-container class="col-7 col-md-8" ngxErrors="firstName">
-                                            <input id="inputEmail" mdInput
+                                            <input id="inputEmail" mdInput email
                                                    type="email"
                                                    placeholder="Saisissez votre email"
                                                    formControlName="email"
